--- a/src/index.css
+++ b/src/index.css
@@ -1,2 +1,20 @@
+@import url("https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap");
 @import "tailwindcss";
 @plugin "daisyui";
+
+/* font */
+.font-urbanist {
+  font-family: "Urbanist", sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+}
+
+
+/* .swiper-slide-active {
+  opacity: 1 !important;
+  transform: scale(1.05);
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+}
+.swiper-slide {
+  transition: all 0.3s ease;
+} */
